--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,9 @@
 
         </activity>
 
+        <activity android:name=".ComponentsActivity">
+
+        </activity>
     </application>
 
 </manifest>
